--- a/app.json
+++ b/app.json
@@ -8,6 +8,12 @@
     "scheme": "reactnativecourse",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+
+    "androidNavigationBar": {
+      "backgroundColor": "#311b6b",
+      "barStyle": "light"
+    },
+
     "ios": {
       "supportsTablet": true
     },
